tdf#114342 move recursion guard to encompass threaded path too

Change-Id: If815d3faeb72fd8a176225fb80f87ee584ece3ba
Reviewed-on: https://gerrit.libreoffice.org/46215
Reviewed-by: Michael Meeks <michael.meeks@collabora.com>
Tested-by: Michael Meeks <michael.meeks@collabora.com>